Ensure taht long words are wrapped into new line

--- a/components.css
+++ b/components.css
@@ -10,6 +10,7 @@
 * {
     font-family: "Overpass", "Roboto", sans-serif;
     box-sizing: border-box;
+    overflow-wrap: break-word;
 }
 
 *[sui-stack] {
